parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXPRESSAOLISTA
    LCURLY
    RCURLY

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Declaracao
Rule 2     Programa -> Declaracao Programa
Rule 3     Declaracao -> DeclaracaoVariavel
Rule 4     Declaracao -> DeclaracaoFuncao
Rule 5     Declaracao -> DeclaracaoEstrutura
Rule 6     Declaracao -> COMMENTLINE
Rule 7     DeclaracaoFuncao -> TIPO ID LPAREN Parametros RPAREN Bloco
Rule 8     Bloco -> LBRACKET Declaracao RBRACKET
Rule 9     Parametros -> Parametro
Rule 10    Parametros -> Parametro COMMA Parametros
Rule 11    Parametro -> TIPO ID
Rule 12    Parametro -> TIPO ID LBRACKET RBRACKET
Rule 13    Parametro -> TIPO ID ELLIPSIS ID
Rule 14    DeclaracaoEstrutura -> LBRACKET DeclaracaoVariavel RBRACKET SEMICOLLON
Rule 15    DeclaracaoVariavel -> TIPO ID SEMICOLLON
Rule 16    DeclaracaoVariavel -> TIPO ID EQUALS Expressao SEMICOLLON
Rule 17    Expressao -> ExpressaoLogica
Rule 18    Expressao -> Atribuicao
Rule 19    Atribuicao -> ID EQUALS Expressao
Rule 20    Atribuicao -> ID PLUSEQUAL Expressao
Rule 21    Atribuicao -> ID MINUSEQUAL Expressao
Rule 22    Atribuicao -> ID TIMESEQUAL Expressao
Rule 23    Atribuicao -> ID DIVEQUAL Expressao
Rule 24    Atribuicao -> ID MODEQUAL Expressao
Rule 25    Atribuicao -> ID ANDANDEQUAL Expressao
Rule 26    Atribuicao -> ID OROREQUAL Expressao
Rule 27    ExpressaoLogica -> ExpressaoRelacional
Rule 28    ExpressaoLogica -> ExpressaoLogica OR ExpressaoRelacional
Rule 29    ExpressaoLogica -> ExpressaoLogica AND ExpressaoRelacional
Rule 30    ExpressaoLogica -> NOT ExpressaoRelacional
Rule 31    ExpressaoRelacional -> ExpressaoAritmetica
Rule 32    ExpressaoRelacional -> ExpressaoAritmetica GREATER ExpressaoAritmetica
Rule 33    ExpressaoRelacional -> ExpressaoAritmetica LESSER ExpressaoAritmetica
Rule 34    ExpressaoRelacional -> ExpressaoAritmetica GREATEREQUAL ExpressaoAritmetica
Rule 35    ExpressaoRelacional -> ExpressaoAritmetica LESSEREQUAL ExpressaoAritmetica
Rule 36    ExpressaoRelacional -> ExpressaoAritmetica NOTEQUAL ExpressaoAritmetica
Rule 37    ExpressaoRelacional -> ExpressaoAritmetica EQUALTO ExpressaoAritmetica
Rule 38    ExpressaoAritmetica -> ExpressaoMultiplicativa
Rule 39    ExpressaoAritmetica -> ExpressaoAritmetica PLUS ExpressaoMultiplicativa
Rule 40    ExpressaoAritmetica -> ExpressaoAritmetica MINUS ExpressaoMultiplicativa
Rule 41    ExpressaoMultiplicativa -> ExpressaoUnaria
Rule 42    ExpressaoMultiplicativa -> ExpressaoMultiplicativa TIMES ExpressaoUnaria
Rule 43    ExpressaoMultiplicativa -> ExpressaoMultiplicativa DIVIDE ExpressaoUnaria
Rule 44    ExpressaoMultiplicativa -> ExpressaoMultiplicativa MOD ExpressaoUnaria
Rule 45    ExpressaoUnaria -> ExpressaoPostfix
Rule 46    ExpressaoUnaria -> MINUS ExpressaoPostfix
Rule 47    ExpressaoUnaria -> PLUS PLUS ExpressaoPostfix
Rule 48    ExpressaoUnaria -> MINUS MINUS ExpressaoPostfix
Rule 49    ExpressaoPostfix -> Primaria
Rule 50    ExpressaoPostfix -> Primaria LBRACKET Expressao RBRACKET
Rule 51    ExpressaoPostfix -> Primaria LPAREN Argumentos RPAREN
Rule 52    ExpressaoPostfix -> Primaria DOT ID
Rule 53    ExpressaoPostfix -> Primaria ARROW ID
Rule 54    Primaria -> ID
Rule 55    Primaria -> NUM_INT
Rule 56    Primaria -> NUM_DEC
Rule 57    Primaria -> TEXTO
Rule 58    Primaria -> LPAREN Expressao LPAREN
Rule 59    Argumentos -> <empty>

Terminals, with rules where they appear

AND                  : 29
ANDANDEQUAL          : 25
ARROW                : 53
COMMA                : 10
COMMENTLINE          : 6
DIVEQUAL             : 23
DIVIDE               : 43
DOT                  : 52
ELLIPSIS             : 13
EQUALS               : 16 19
EQUALTO              : 37
EXPRESSAOLISTA       : 
GREATER              : 32
GREATEREQUAL         : 34
ID                   : 7 11 12 13 13 15 16 19 20 21 22 23 24 25 26 52 53 54
LBRACKET             : 8 12 14 50
LCURLY               : 
LESSER               : 33
LESSEREQUAL          : 35
LPAREN               : 7 51 58 58
MINUS                : 40 46 48 48
MINUSEQUAL           : 21
MOD                  : 44
MODEQUAL             : 24
NOT                  : 30
NOTEQUAL             : 36
NUM_DEC              : 56
NUM_INT              : 55
OR                   : 28
OROREQUAL            : 26
PLUS                 : 39 47 47
PLUSEQUAL            : 20
RBRACKET             : 8 12 14 50
RCURLY               : 
RPAREN               : 7 51
SEMICOLLON           : 14 15 16
TEXTO                : 57
TIMES                : 42
TIMESEQUAL           : 22
TIPO                 : 7 11 12 13 15 16
error                : 

Nonterminals, with rules where they appear

Argumentos           : 51
Atribuicao           : 18
Bloco                : 7
Declaracao           : 1 2 8
DeclaracaoEstrutura  : 5
DeclaracaoFuncao     : 4
DeclaracaoVariavel   : 3 14
Expressao            : 16 19 20 21 22 23 24 25 26 50 58
ExpressaoAritmetica  : 31 32 32 33 33 34 34 35 35 36 36 37 37 39 40
ExpressaoLogica      : 17 28 29
ExpressaoMultiplicativa : 38 39 40 42 43 44
ExpressaoPostfix     : 45 46 47 48
ExpressaoRelacional  : 27 28 29 30
ExpressaoUnaria      : 41 42 43 44
Parametro            : 9 10
Parametros           : 7 10
Primaria             : 49 50 51 52 53
Programa             : 2 0

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Declaracao
    (2) Programa -> . Declaracao Programa
    (3) Declaracao -> . DeclaracaoVariavel
    (4) Declaracao -> . DeclaracaoFuncao
    (5) Declaracao -> . DeclaracaoEstrutura
    (6) Declaracao -> . COMMENTLINE
    (15) DeclaracaoVariavel -> . TIPO ID SEMICOLLON
    (16) DeclaracaoVariavel -> . TIPO ID EQUALS Expressao SEMICOLLON
    (7) DeclaracaoFuncao -> . TIPO ID LPAREN Parametros RPAREN Bloco
    (14) DeclaracaoEstrutura -> . LBRACKET DeclaracaoVariavel RBRACKET SEMICOLLON

    COMMENTLINE     shift and go to state 6
    TIPO            shift and go to state 7
    LBRACKET        shift and go to state 8

    Programa                       shift and go to state 1
    Declaracao                     shift and go to state 2
    DeclaracaoVariavel             shift and go to state 3
    DeclaracaoFuncao               shift and go to state 4
    DeclaracaoEstrutura            shift and go to state 5

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Declaracao .
    (2) Programa -> Declaracao . Programa
    (1) Programa -> . Declaracao
    (2) Programa -> . Declaracao Programa
    (3) Declaracao -> . DeclaracaoVariavel
    (4) Declaracao -> . DeclaracaoFuncao
    (5) Declaracao -> . DeclaracaoEstrutura
    (6) Declaracao -> . COMMENTLINE
    (15) DeclaracaoVariavel -> . TIPO ID SEMICOLLON
    (16) DeclaracaoVariavel -> . TIPO ID EQUALS Expressao SEMICOLLON
    (7) DeclaracaoFuncao -> . TIPO ID LPAREN Parametros RPAREN Bloco
    (14) DeclaracaoEstrutura -> . LBRACKET DeclaracaoVariavel RBRACKET SEMICOLLON

    $end            reduce using rule 1 (Programa -> Declaracao .)
    COMMENTLINE     shift and go to state 6
    TIPO            shift and go to state 7
    LBRACKET        shift and go to state 8

    Declaracao                     shift and go to state 2
    Programa                       shift and go to state 9
    DeclaracaoVariavel             shift and go to state 3
    DeclaracaoFuncao               shift and go to state 4
    DeclaracaoEstrutura            shift and go to state 5

state 3

    (3) Declaracao -> DeclaracaoVariavel .

    COMMENTLINE     reduce using rule 3 (Declaracao -> DeclaracaoVariavel .)
    TIPO            reduce using rule 3 (Declaracao -> DeclaracaoVariavel .)
    LBRACKET        reduce using rule 3 (Declaracao -> DeclaracaoVariavel .)
    $end            reduce using rule 3 (Declaracao -> DeclaracaoVariavel .)
    RBRACKET        reduce using rule 3 (Declaracao -> DeclaracaoVariavel .)


state 4

    (4) Declaracao -> DeclaracaoFuncao .

    COMMENTLINE     reduce using rule 4 (Declaracao -> DeclaracaoFuncao .)
    TIPO            reduce using rule 4 (Declaracao -> DeclaracaoFuncao .)
    LBRACKET        reduce using rule 4 (Declaracao -> DeclaracaoFuncao .)
    $end            reduce using rule 4 (Declaracao -> DeclaracaoFuncao .)
    RBRACKET        reduce using rule 4 (Declaracao -> DeclaracaoFuncao .)


state 5

    (5) Declaracao -> DeclaracaoEstrutura .

    COMMENTLINE     reduce using rule 5 (Declaracao -> DeclaracaoEstrutura .)
    TIPO            reduce using rule 5 (Declaracao -> DeclaracaoEstrutura .)
    LBRACKET        reduce using rule 5 (Declaracao -> DeclaracaoEstrutura .)
    $end            reduce using rule 5 (Declaracao -> DeclaracaoEstrutura .)
    RBRACKET        reduce using rule 5 (Declaracao -> DeclaracaoEstrutura .)


state 6

    (6) Declaracao -> COMMENTLINE .

    COMMENTLINE     reduce using rule 6 (Declaracao -> COMMENTLINE .)
    TIPO            reduce using rule 6 (Declaracao -> COMMENTLINE .)
    LBRACKET        reduce using rule 6 (Declaracao -> COMMENTLINE .)
    $end            reduce using rule 6 (Declaracao -> COMMENTLINE .)
    RBRACKET        reduce using rule 6 (Declaracao -> COMMENTLINE .)


state 7

    (15) DeclaracaoVariavel -> TIPO . ID SEMICOLLON
    (16) DeclaracaoVariavel -> TIPO . ID EQUALS Expressao SEMICOLLON
    (7) DeclaracaoFuncao -> TIPO . ID LPAREN Parametros RPAREN Bloco

    ID              shift and go to state 10


state 8

    (14) DeclaracaoEstrutura -> LBRACKET . DeclaracaoVariavel RBRACKET SEMICOLLON
    (15) DeclaracaoVariavel -> . TIPO ID SEMICOLLON
    (16) DeclaracaoVariavel -> . TIPO ID EQUALS Expressao SEMICOLLON

    TIPO            shift and go to state 12

    DeclaracaoVariavel             shift and go to state 11

state 9

    (2) Programa -> Declaracao Programa .

    $end            reduce using rule 2 (Programa -> Declaracao Programa .)


state 10

    (15) DeclaracaoVariavel -> TIPO ID . SEMICOLLON
    (16) DeclaracaoVariavel -> TIPO ID . EQUALS Expressao SEMICOLLON
    (7) DeclaracaoFuncao -> TIPO ID . LPAREN Parametros RPAREN Bloco

    SEMICOLLON      shift and go to state 13
    EQUALS          shift and go to state 14
    LPAREN          shift and go to state 15


state 11

    (14) DeclaracaoEstrutura -> LBRACKET DeclaracaoVariavel . RBRACKET SEMICOLLON

    RBRACKET        shift and go to state 16


state 12

    (15) DeclaracaoVariavel -> TIPO . ID SEMICOLLON
    (16) DeclaracaoVariavel -> TIPO . ID EQUALS Expressao SEMICOLLON

    ID              shift and go to state 17


state 13

    (15) DeclaracaoVariavel -> TIPO ID SEMICOLLON .

    COMMENTLINE     reduce using rule 15 (DeclaracaoVariavel -> TIPO ID SEMICOLLON .)
    TIPO            reduce using rule 15 (DeclaracaoVariavel -> TIPO ID SEMICOLLON .)
    LBRACKET        reduce using rule 15 (DeclaracaoVariavel -> TIPO ID SEMICOLLON .)
    $end            reduce using rule 15 (DeclaracaoVariavel -> TIPO ID SEMICOLLON .)
    RBRACKET        reduce using rule 15 (DeclaracaoVariavel -> TIPO ID SEMICOLLON .)


state 14

    (16) DeclaracaoVariavel -> TIPO ID EQUALS . Expressao SEMICOLLON
    (17) Expressao -> . ExpressaoLogica
    (18) Expressao -> . Atribuicao
    (27) ExpressaoLogica -> . ExpressaoRelacional
    (28) ExpressaoLogica -> . ExpressaoLogica OR ExpressaoRelacional
    (29) ExpressaoLogica -> . ExpressaoLogica AND ExpressaoRelacional
    (30) ExpressaoLogica -> . NOT ExpressaoRelacional
    (19) Atribuicao -> . ID EQUALS Expressao
    (20) Atribuicao -> . ID PLUSEQUAL Expressao
    (21) Atribuicao -> . ID MINUSEQUAL Expressao
    (22) Atribuicao -> . ID TIMESEQUAL Expressao
    (23) Atribuicao -> . ID DIVEQUAL Expressao
    (24) Atribuicao -> . ID MODEQUAL Expressao
    (25) Atribuicao -> . ID ANDANDEQUAL Expressao
    (26) Atribuicao -> . ID OROREQUAL Expressao
    (31) ExpressaoRelacional -> . ExpressaoAritmetica
    (32) ExpressaoRelacional -> . ExpressaoAritmetica GREATER ExpressaoAritmetica
    (33) ExpressaoRelacional -> . ExpressaoAritmetica LESSER ExpressaoAritmetica
    (34) ExpressaoRelacional -> . ExpressaoAritmetica GREATEREQUAL ExpressaoAritmetica
    (35) ExpressaoRelacional -> . ExpressaoAritmetica LESSEREQUAL ExpressaoAritmetica
    (36) ExpressaoRelacional -> . ExpressaoAritmetica NOTEQUAL ExpressaoAritmetica
    (37) ExpressaoRelacional -> . ExpressaoAritmetica EQUALTO ExpressaoAritmetica
    (38) ExpressaoAritmetica -> . ExpressaoMultiplicativa
    (39) ExpressaoAritmetica -> . ExpressaoAritmetica PLUS ExpressaoMultiplicativa
    (40) ExpressaoAritmetica -> . ExpressaoAritmetica MINUS ExpressaoMultiplicativa
    (41) ExpressaoMultiplicativa -> . ExpressaoUnaria
    (42) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa TIMES ExpressaoUnaria
    (43) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa DIVIDE ExpressaoUnaria
    (44) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa MOD ExpressaoUnaria
    (45) ExpressaoUnaria -> . ExpressaoPostfix
    (46) ExpressaoUnaria -> . MINUS ExpressaoPostfix
    (47) ExpressaoUnaria -> . PLUS PLUS ExpressaoPostfix
    (48) ExpressaoUnaria -> . MINUS MINUS ExpressaoPostfix
    (49) ExpressaoPostfix -> . Primaria
    (50) ExpressaoPostfix -> . Primaria LBRACKET Expressao RBRACKET
    (51) ExpressaoPostfix -> . Primaria LPAREN Argumentos RPAREN
    (52) ExpressaoPostfix -> . Primaria DOT ID
    (53) ExpressaoPostfix -> . Primaria ARROW ID
    (54) Primaria -> . ID
    (55) Primaria -> . NUM_INT
    (56) Primaria -> . NUM_DEC
    (57) Primaria -> . TEXTO
    (58) Primaria -> . LPAREN Expressao LPAREN

    NOT             shift and go to state 23
    ID              shift and go to state 18
    MINUS           shift and go to state 27
    PLUS            shift and go to state 26
    NUM_INT         shift and go to state 32
    NUM_DEC         shift and go to state 33
    TEXTO           shift and go to state 34
    LPAREN          shift and go to state 31

    Expressao                      shift and go to state 19
    ExpressaoLogica                shift and go to state 20
    Atribuicao                     shift and go to state 21
    ExpressaoRelacional            shift and go to state 22
    ExpressaoAritmetica            shift and go to state 24
    ExpressaoMultiplicativa        shift and go to state 25
    ExpressaoUnaria                shift and go to state 28
    ExpressaoPostfix               shift and go to state 29
    Primaria                       shift and go to state 30

state 15

    (7) DeclaracaoFuncao -> TIPO ID LPAREN . Parametros RPAREN Bloco
    (9) Parametros -> . Parametro
    (10) Parametros -> . Parametro COMMA Parametros
    (11) Parametro -> . TIPO ID
    (12) Parametro -> . TIPO ID LBRACKET RBRACKET
    (13) Parametro -> . TIPO ID ELLIPSIS ID

    TIPO            shift and go to state 35

    Parametros                     shift and go to state 36
    Parametro                      shift and go to state 37

state 16

    (14) DeclaracaoEstrutura -> LBRACKET DeclaracaoVariavel RBRACKET . SEMICOLLON

    SEMICOLLON      shift and go to state 38


state 17

    (15) DeclaracaoVariavel -> TIPO ID . SEMICOLLON
    (16) DeclaracaoVariavel -> TIPO ID . EQUALS Expressao SEMICOLLON

    SEMICOLLON      shift and go to state 13
    EQUALS          shift and go to state 14


state 18

    (19) Atribuicao -> ID . EQUALS Expressao
    (20) Atribuicao -> ID . PLUSEQUAL Expressao
    (21) Atribuicao -> ID . MINUSEQUAL Expressao
    (22) Atribuicao -> ID . TIMESEQUAL Expressao
    (23) Atribuicao -> ID . DIVEQUAL Expressao
    (24) Atribuicao -> ID . MODEQUAL Expressao
    (25) Atribuicao -> ID . ANDANDEQUAL Expressao
    (26) Atribuicao -> ID . OROREQUAL Expressao
    (54) Primaria -> ID .

    EQUALS          shift and go to state 39
    PLUSEQUAL       shift and go to state 40
    MINUSEQUAL      shift and go to state 41
    TIMESEQUAL      shift and go to state 42
    DIVEQUAL        shift and go to state 43
    MODEQUAL        shift and go to state 44
    ANDANDEQUAL     shift and go to state 45
    OROREQUAL       shift and go to state 46
    LBRACKET        reduce using rule 54 (Primaria -> ID .)
    LPAREN          reduce using rule 54 (Primaria -> ID .)
    DOT             reduce using rule 54 (Primaria -> ID .)
    ARROW           reduce using rule 54 (Primaria -> ID .)
    TIMES           reduce using rule 54 (Primaria -> ID .)
    DIVIDE          reduce using rule 54 (Primaria -> ID .)
    MOD             reduce using rule 54 (Primaria -> ID .)
    GREATER         reduce using rule 54 (Primaria -> ID .)
    LESSER          reduce using rule 54 (Primaria -> ID .)
    GREATEREQUAL    reduce using rule 54 (Primaria -> ID .)
    LESSEREQUAL     reduce using rule 54 (Primaria -> ID .)
    NOTEQUAL        reduce using rule 54 (Primaria -> ID .)
    EQUALTO         reduce using rule 54 (Primaria -> ID .)
    PLUS            reduce using rule 54 (Primaria -> ID .)
    MINUS           reduce using rule 54 (Primaria -> ID .)
    OR              reduce using rule 54 (Primaria -> ID .)
    AND             reduce using rule 54 (Primaria -> ID .)
    SEMICOLLON      reduce using rule 54 (Primaria -> ID .)
    RBRACKET        reduce using rule 54 (Primaria -> ID .)


state 19

    (16) DeclaracaoVariavel -> TIPO ID EQUALS Expressao . SEMICOLLON

    SEMICOLLON      shift and go to state 47


state 20

    (17) Expressao -> ExpressaoLogica .
    (28) ExpressaoLogica -> ExpressaoLogica . OR ExpressaoRelacional
    (29) ExpressaoLogica -> ExpressaoLogica . AND ExpressaoRelacional

    SEMICOLLON      reduce using rule 17 (Expressao -> ExpressaoLogica .)
    LPAREN          reduce using rule 17 (Expressao -> ExpressaoLogica .)
    RBRACKET        reduce using rule 17 (Expressao -> ExpressaoLogica .)
    OR              shift and go to state 48
    AND             shift and go to state 49


state 21

    (18) Expressao -> Atribuicao .

    SEMICOLLON      reduce using rule 18 (Expressao -> Atribuicao .)
    LPAREN          reduce using rule 18 (Expressao -> Atribuicao .)
    RBRACKET        reduce using rule 18 (Expressao -> Atribuicao .)


state 22

    (27) ExpressaoLogica -> ExpressaoRelacional .

    OR              reduce using rule 27 (ExpressaoLogica -> ExpressaoRelacional .)
    AND             reduce using rule 27 (ExpressaoLogica -> ExpressaoRelacional .)
    SEMICOLLON      reduce using rule 27 (ExpressaoLogica -> ExpressaoRelacional .)
    LPAREN          reduce using rule 27 (ExpressaoLogica -> ExpressaoRelacional .)
    RBRACKET        reduce using rule 27 (ExpressaoLogica -> ExpressaoRelacional .)


state 23

    (30) ExpressaoLogica -> NOT . ExpressaoRelacional
    (31) ExpressaoRelacional -> . ExpressaoAritmetica
    (32) ExpressaoRelacional -> . ExpressaoAritmetica GREATER ExpressaoAritmetica
    (33) ExpressaoRelacional -> . ExpressaoAritmetica LESSER ExpressaoAritmetica
    (34) ExpressaoRelacional -> . ExpressaoAritmetica GREATEREQUAL ExpressaoAritmetica
    (35) ExpressaoRelacional -> . ExpressaoAritmetica LESSEREQUAL ExpressaoAritmetica
    (36) ExpressaoRelacional -> . ExpressaoAritmetica NOTEQUAL ExpressaoAritmetica
    (37) ExpressaoRelacional -> . ExpressaoAritmetica EQUALTO ExpressaoAritmetica
    (38) ExpressaoAritmetica -> . ExpressaoMultiplicativa
    (39) ExpressaoAritmetica -> . ExpressaoAritmetica PLUS ExpressaoMultiplicativa
    (40) ExpressaoAritmetica -> . ExpressaoAritmetica MINUS ExpressaoMultiplicativa
    (41) ExpressaoMultiplicativa -> . ExpressaoUnaria
    (42) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa TIMES ExpressaoUnaria
    (43) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa DIVIDE ExpressaoUnaria
    (44) ExpressaoMultiplicativa -> . ExpressaoMultiplicativa MOD ExpressaoUnaria
    (45) ExpressaoUnaria -> . ExpressaoPostfix
    (46) ExpressaoUnaria -> . MINUS ExpressaoPostfix
    (47) ExpressaoUnaria -> . PLUS PLUS ExpressaoPostfix
    (48) ExpressaoUnaria -> . MINUS MINUS ExpressaoPostfix
    (49) ExpressaoPostfix -> . Primaria
    (50) ExpressaoPostfix -> . Primaria LBRACKET Expressao RBRACKET
    (51) ExpressaoPostfix -> . Primaria LPAREN Argumentos RPAREN
    (52) ExpressaoPostfix -> . Primaria DOT ID
    (53) ExpressaoPostfix -> . Primaria ARROW ID
    (54) Primaria -> . ID
    (55) Primaria -> . NUM_INT
    (56) Primaria -> . NUM_DEC
    (57) Primaria -> . TEXTO
    (58) Primaria -> . LPAREN Expressao LPAREN

    MINUS           shift and go to state 27
    PLUS            shift and go to state 26
    ID              shift and go to state 51
    NUM_INT         shift and go to state 32
    NUM_DEC         shift and go to state 33
    TEXTO           shift and go to state 34
    LPAREN          shift and go to state 31

    ExpressaoRelacional            shift and go to state 50
    ExpressaoAritmetica            shift and go to state 24
    ExpressaoMultiplicativa        shift and go to state 25
    ExpressaoUnaria                shift and go to state 28
    ExpressaoPostfix               shift and go to state 29
    Primaria                       shift and go to state 30

state 24

    (31) ExpressaoRelacional -> ExpressaoAritmetica .
    (32) ExpressaoRelacional -> ExpressaoAritmetica . GREATER ExpressaoAritmetica
    (33) ExpressaoRelacional -> ExpressaoAritmetica . LESSER ExpressaoAritmetica
    (34) ExpressaoRelacional -> ExpressaoAritmetica . GREATEREQUAL ExpressaoAritmetica
    (35) ExpressaoRelacional -> ExpressaoAritmetica . LESSEREQUAL ExpressaoAritmetica
    (36) ExpressaoRelacional -> ExpressaoAritmetica . NOTEQUAL ExpressaoAritmetica
    (37) ExpressaoRelacional -> ExpressaoAritmetica . EQUALTO ExpressaoAritmetica
    (39) ExpressaoAritmetica -> ExpressaoAritmetica . PLUS ExpressaoMultiplicativa
    (40) ExpressaoAritmetica -> ExpressaoAritmetica . MINUS ExpressaoMultiplicativa

    OR              reduce using rule 31 (ExpressaoRelacional -> ExpressaoAritmetica .)
    AND             reduce using rule 31 (ExpressaoRelacional -> ExpressaoAritmetica .)
    SEMICOLLON      reduce using rule 31 (ExpressaoRelacional -> ExpressaoAritmetica .)
    LPAREN          reduce using rule 31 (ExpressaoRelacional -> ExpressaoAritmetica .)
    RBRACKET        reduce using rule 31 (ExpressaoRelacional -> ExpressaoAritmetica .)
    GREATER         shift and go to state 52
    LESSER          shift and go to state 53
    GREATEREQUAL    shift and go to state 54
    LESSEREQUAL     shift and go to state 55
    NOTEQUAL        shift and go to state 56
    EQUALTO         shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59


state 25

    (38) ExpressaoAritmetica -> ExpressaoMultiplicativa .
    (42) ExpressaoMultiplicativa -> ExpressaoMultiplicativa . TIMES ExpressaoUnaria
    (43) ExpressaoMultiplicativa -> ExpressaoMultiplicativa . DIVIDE ExpressaoUnaria
    (44) ExpressaoMultiplicativa -> ExpressaoMultiplicativa . MOD ExpressaoUnaria

    GREATER         reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    LESSER          reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    GREATEREQUAL    reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    LESSEREQUAL     reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    NOTEQUAL        reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    EQUALTO         reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    PLUS            reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    MINUS           reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    OR              reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    AND             reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    SEMICOLLON      reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    LPAREN          reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    RBRACKET        reduce using rule 38 (ExpressaoAritmetica -> ExpressaoMultiplicativa .)
    TIMES           shift and go to state 60
    DIVIDE          shift and go to state 61
    MOD             shift and go to state 62


state 26

    (47) ExpressaoUnaria -> PLUS . PLUS ExpressaoPostfix

    PLUS            shift and go to state 63


state 27

    (46) ExpressaoUnaria -> MINUS . ExpressaoPostfix
    (48) ExpressaoUnaria -> MINUS . MINUS ExpressaoPostfix
    (49) ExpressaoPostfix -> . Primaria
    (50) ExpressaoPostfix -> . Primaria LBRACKET Expressao RBRACKET
    (51) ExpressaoPostfix -> . Primaria LPAREN Argumentos RPAREN
    (52) ExpressaoPostfix -> . Primaria DOT ID
    (53) ExpressaoPostfix -> . Primaria ARROW ID
    (54) Primaria -> . ID
    (55) Primaria -> . NUM_INT
    (56) Primaria -> . NUM_DEC
    (57) Primaria -> . TEXTO
    (58) Primaria -> . LPAREN Expressao LPAREN

    MINUS           shift and go to state 64
    ID              shift and go to state 51
    NUM_INT         shift and go to state 32
    NUM_DEC         shift and go to state 33
    TEXTO           shift and go to state 34
    LPAREN          shift and go to state 31

    ExpressaoPostfix               shift and go to state 65
    Primaria                       shift and go to state 30

state 28

    (41) ExpressaoMultiplicativa -> ExpressaoUnaria .
